--- a/loader.html
+++ b/loader.html
@@ -336,7 +336,7 @@
 	
 			// Redirect to a website after a delay (you can adjust the delay)
 			setTimeout(function () {
-				window.location.href = 'https://google.com'; // Replace with your desired URL
+				window.location.href = 'https://suriyakumarvijayanayagam.github.io/Portfolio/'; // Replace with your desired URL
 			}, 1000); // 3000 milliseconds = 3 seconds
 		}
 	</script>
